style: TRANSACTIONS: fix spacing

--- a/styles/pages/transactions.scss
+++ b/styles/pages/transactions.scss
@@ -223,8 +223,7 @@ $details-status-width: 15px;
 
     left: 0;
     right: 0;
-    margin-left: 50%;
-    margin-right: 50%;
+    margin-left: 45.5%;    // 5/11 = 45.5%
     top: 80%;
 
     border: 1px solid $brand-primary;
